# advent-of-code

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.md  testfile.txt
2022/R/: NAMESPACE
2022/Rust/: .gitignore  Cargo.toml  README.md
2022/Rust/src/examples/: 05.txt
2022/Rust/src/puzzles/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  10.md  11.md  12.md  13.md  14.md
2023/: .Rbuildignore  .Rprofile  .gitignore
2023/APL/: day24.ua  p01.apl  p02.apl  p03.apl  p04.apl  p06.apl  p07.apl  p07.kap  p07.ua  p09.apl  p14.apl  p15.apl  p15.txt  p18.apl  p19.apl  p20.apl
2023/R/: .Rbuildignore  .Rprofile  .gitignore  DESCRIPTION  NAMESPACE  README.md  data-solutions.R  p17.jl
2024/: README.md
2024/APL/: day13.apl  p01.apl  p04.apl  p08.apl  p10.apl
2024/Haskell/: Haskell.cabal  LICENSE  day01.hs  day02.hs  day03.hs  day04.hs  day05.hs  day07.hs  day11.hs  day11_v2.hs  day17.hs  day18.hs  day19.hs  day23.hs
R/: data-solutions.R  day05.R  day06.R  day07.R  day09.R  day10.R  day12.R  day13.R  day14.R  day15.R  day16.R  day17.R  day19.R  day20.R  day22.R  day23.R
inst/: input16.txt  run-day01.R  run-day02.R  run-day06.R  run-day07.R  run-day09.R  run-day10.R  run-day12.R  run-day15.R  run-day16.R  run-day17.R  run-day19.R  run-day20.R  run-day21.R  run-day22.R  run-day23.R  run-day24.R
man/: aoc_solutions.Rd  bfs3d.Rd  day02.Rd  day03.Rd  day04.Rd  day07.Rd  day08.Rd  day09.Rd  day12.Rd  day13.Rd  day14.Rd  day16.Rd  day17.Rd  day18.Rd  day19.Rd  day20.Rd  day21.Rd  day24.Rd  dijkstra.Rd  parseinput.Rd
tests/: testthat.R
(+312 files in other folders)
